@@ -1,7 +1,9 @@
 package com.sap.sailing.server.gateway.jaxrs.api;
 
 import java.io.IOException;
+import java.io.Serializable;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -25,6 +27,8 @@ import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 import javax.ws.rs.Consumes;
+import javax.ws.rs.DELETE;
+import javax.ws.rs.DefaultValue;
 import javax.ws.rs.FormParam;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
@@ -81,11 +85,16 @@ import com.sap.sailing.server.gateway.serialization.impl.LeaderboardGroupBaseJso
 import com.sap.sailing.server.gateway.serialization.impl.TrackingConnectorInfoJsonSerializer;
 import com.sap.sailing.server.gateway.serialization.impl.VenueJsonSerializer;
 import com.sap.sailing.server.hierarchy.SailingHierarchyOwnershipUpdater;
+import com.sap.sailing.server.interfaces.RacingEventService;
 import com.sap.sailing.server.operationaltransformation.AddColumnToSeries;
 import com.sap.sailing.server.operationaltransformation.AddCourseAreas;
 import com.sap.sailing.server.operationaltransformation.AddSpecificRegatta;
 import com.sap.sailing.server.operationaltransformation.CreateEvent;
 import com.sap.sailing.server.operationaltransformation.CreateRegattaLeaderboard;
+import com.sap.sailing.server.operationaltransformation.RemoveEvent;
+import com.sap.sailing.server.operationaltransformation.RemoveLeaderboard;
+import com.sap.sailing.server.operationaltransformation.RemoveLeaderboardGroup;
+import com.sap.sailing.server.operationaltransformation.RemoveRegatta;
 import com.sap.sailing.server.operationaltransformation.UpdateLeaderboardGroup;
 import com.sap.sailing.server.operationaltransformation.UpdateSeries;
 import com.sap.sailing.server.security.SailingViewerRole;
@@ -97,6 +106,7 @@ import com.sap.sse.common.Util.Pair;
 import com.sap.sse.common.Util.Triple;
 import com.sap.sse.common.impl.MillisecondsDurationImpl;
 import com.sap.sse.common.impl.MillisecondsTimePoint;
+import com.sap.sse.security.SecurityService;
 import com.sap.sse.security.shared.HasPermissions.DefaultActions;
 import com.sap.sse.security.shared.RoleDefinition;
 import com.sap.sse.security.shared.impl.User;
@@ -104,6 +114,7 @@ import com.sap.sse.security.shared.impl.UserGroup;
 import com.sap.sse.security.shared.impl.WildcardPermissionEncoder;
 import com.sap.sse.shared.media.ImageDescriptor;
 import com.sap.sse.shared.media.VideoDescriptor;
+import com.sap.sse.util.impl.UUIDHelper;
 
 @Path("/v1/events")
 public class EventsResource extends AbstractSailingServerResource {
@@ -127,6 +138,88 @@ public class EventsResource extends AbstractSailingServerResource {
     public EventsResource() {
     }
     
+    
+    /**
+     * Method to delete a specified {@link Event}.
+     * 
+     * @param eventId - The UUID of the event to delete
+     * @param withLeaderboardGroups - Boolean whether to delete all associated {@link LeaderboardGroup}s or not. Doing so will also delete the overall {@link Leaderboard}s of each group.
+     * @param withLeaderboards - Boolean whether to delete all associated {@link Leaderboard}s. 
+     * @param withRegattas - Boolean whether to delete all associated {@link Regatta}s. Doing so will also delete all their {@link RegattaLeaderboard}s and {@link TrackedRace}s.
+     * @return A 200 response, if the delete was successful or a 404 response, if the eventId was not found.
+     * @throws ParseException
+    */
+    @DELETE
+    @Path("/{eventId}/")
+    public Response delete(@PathParam("eventId") String eventId,
+            @QueryParam("withLeaderboardGroups") Boolean withLeaderboardGroups,
+            @QueryParam("withLeaderboards") Boolean withLeaderboards, @QueryParam("withRegattas") Boolean withRegattas)
+            throws ParseException {
+        final Serializable eventUUID = UUIDHelper.tryUuidConversion(eventId);
+        final RacingEventService racingEventService = getService();
+        final Event event = racingEventService.getEvent(eventUUID);
+        if (event != null) {
+            final boolean deleteLeaderboardGroups = withLeaderboardGroups == Boolean.TRUE;
+            final boolean deleteLeaderboards = withLeaderboards == Boolean.TRUE;
+            final boolean deleteRegattas = withRegattas == Boolean.TRUE;
+            final SecurityService securityService = getSecurityService();
+            securityService.checkPermissionAndDeleteOwnershipForObjectRemoval(event, () -> {
+                racingEventService.apply(new RemoveEvent(event.getId()));
+                if (deleteLeaderboards || deleteLeaderboardGroups || deleteRegattas) {
+                    for (final LeaderboardGroup group : event.getLeaderboardGroups()) {
+                        if (deleteLeaderboards || deleteRegattas) {
+                            for (final Leaderboard leaderboard : group.getLeaderboards()) {
+                                if (deleteRegattas && leaderboard instanceof RegattaLeaderboard) {
+                                    deleteReferencedRegatta(securityService, racingEventService, leaderboard);
+                                }
+                                if (deleteLeaderboards) {
+                                    securityService.checkPermissionAndDeleteOwnershipForObjectRemoval(leaderboard,
+                                            () -> {
+                                                racingEventService.apply(new RemoveLeaderboard(leaderboard.getName()));
+                                            });
+                                }
+                            }
+                        }
+                        if (deleteLeaderboardGroups) {
+                            securityService.checkPermissionAndDeleteOwnershipForObjectRemoval(group, () -> {
+                                if (!deleteLeaderboards) {
+                                    deleteReferencedOverallLeaderboard(deleteRegattas, securityService,
+                                            racingEventService, group);
+                                }
+                                racingEventService.apply(new RemoveLeaderboardGroup(group.getId()));
+                            });
+                        }
+                    }
+                }
+            });
+        } else {
+            return getBadEventErrorResponse(eventId);
+        }
+        return Response.ok().build();
+    }
+
+    private void deleteReferencedOverallLeaderboard(final boolean deleteRegattas, final SecurityService securityService,
+            final RacingEventService racingEventService, final LeaderboardGroup group) {
+        final Leaderboard overallLeaderboard = group.getOverallLeaderboard();
+        if (overallLeaderboard != null) {
+            if (deleteRegattas && overallLeaderboard instanceof RegattaLeaderboard) {
+                deleteReferencedRegatta(securityService, racingEventService, overallLeaderboard);
+            }
+            securityService.checkPermissionAndDeleteOwnershipForObjectRemoval(overallLeaderboard, () -> {
+                racingEventService.apply(new RemoveLeaderboard(overallLeaderboard.getName()));
+            });
+        }
+    }
+
+    private void deleteReferencedRegatta(final SecurityService securityService,
+            final RacingEventService racingEventService, final Leaderboard leaderboard) {
+        final RegattaLeaderboard regattaLeaderboard = (RegattaLeaderboard) leaderboard;
+        final Regatta regatta = regattaLeaderboard.getRegatta();
+        securityService.checkPermissionAndDeleteOwnershipForObjectRemoval(regatta, () -> {
+            racingEventService.apply(new RemoveRegatta(regatta.getRegattaIdentifier()));
+        });
+    }
+
     @POST
     @Path("/{eventId}/migrate")
     public Response migrateOwnershipForEvent(@PathParam("eventId") UUID eventId,
@@ -198,7 +291,7 @@ public class EventsResource extends AbstractSailingServerResource {
                         eventAndLeaderboardGroupAndLeaderboard.getC().getRegatta().getRegistrationLinkSecret());
                 jsonResponse.put("leaderboard", eventAndLeaderboardGroupAndLeaderboard.getC().getName());
             }
-            response = ok(jsonResponse.toJSONString(), MediaType.APPLICATION_JSON);
+            response = Response.ok(streamingOutput(jsonResponse)).build();
         }
         return response;
     }
@@ -289,19 +382,20 @@ public class EventsResource extends AbstractSailingServerResource {
     
     @GET
     @Produces("application/json;charset=UTF-8")
-    public Response getEvents(@QueryParam("showNonPublic") String showNonPublic) {
+    public Response getEvents(@QueryParam("showNonPublic") String showNonPublic, @QueryParam("include") @DefaultValue("false") Boolean include,
+            @QueryParam("id") List<UUID> eventIds) {
         JsonSerializer<EventBase> eventSerializer = new EventBaseJsonSerializer(
                 new VenueJsonSerializer(new CourseAreaJsonSerializer()), new LeaderboardGroupBaseJsonSerializer(),
                 new TrackingConnectorInfoJsonSerializer());
         JSONArray result = new JSONArray();
-        for (Event event : getService().getAllEvents()) {
+        Iterable<Event> events = getService().getEventsSelectively(include, eventIds);
+        for (Event event : events) {
             if (getSecurityService().hasCurrentUserReadPermission(event)
                     && ((showNonPublic != null && Boolean.valueOf(showNonPublic)) || event.isPublic())) {
                 result.add(eventSerializer.serialize(event));
             }
         }
-        String json = result.toJSONString();
-        return Response.ok(json).header("Content-Type", MediaType.APPLICATION_JSON + ";charset=UTF-8").build();
+        return Response.ok(streamingOutput(result)).build();
     }
 
     @GET
@@ -334,9 +428,7 @@ public class EventsResource extends AbstractSailingServerResource {
                     new VenueJsonSerializer(new CourseAreaJsonSerializer()), new LeaderboardGroupBaseJsonSerializer(),
                     new TrackingConnectorInfoJsonSerializer());
             JSONObject eventJson = eventSerializer.serialize(event);
-
-            String json = eventJson.toJSONString();
-            response = Response.ok(json).header("Content-Type", MediaType.APPLICATION_JSON + ";charset=UTF-8").build();
+            response = Response.ok(streamingOutput(eventJson)).build();
         }
         return response;
     }
@@ -375,9 +467,7 @@ public class EventsResource extends AbstractSailingServerResource {
                         filterByLeaderboard, filterByDayOffset, clientTimeZoneOffset, getService());
                 JSONObject raceStatesJson = eventRaceStatesSerializer.serialize(
                         new Pair<Event, Iterable<Leaderboard>>(event, getService().getLeaderboards().values()));
-                String json = raceStatesJson.toJSONString();
-                response = Response.ok(json).header("Content-Type", MediaType.APPLICATION_JSON + ";charset=UTF-8")
-                        .build();
+                response = Response.ok(streamingOutput(raceStatesJson)).build();
             } else {
                 response = Response.status(Status.FORBIDDEN).build();
             }
@@ -388,11 +478,13 @@ public class EventsResource extends AbstractSailingServerResource {
     private RegattaLeaderboard validateAndCreateRegatta(String regattaNameParam, String boatClassNameParam,
             String scoringSchemeParam, UUID courseAreaId, String buoyZoneRadiusInHullLengthsParam,
             String useStartTimeInterferenceParam, String controlTrackingFromStartAndFinishTimesParam,
-            String rankingMetricParam, List<Integer> leaderboardDiscardThresholdsParam, String numberOfRacesParam,
-            boolean canBoatsOfCompetitorsChangePerRace, CompetitorRegistrationType competitorRegistrationType,
-            String competitorRegistrationSecret) throws ParseException, NotFoundException {
+            String autoRestartTrackingUponCompetitorSetChangeParam, String rankingMetricParam, List<Integer> leaderboardDiscardThresholdsParam,
+            String numberOfRacesParam, boolean canBoatsOfCompetitorsChangePerRace,
+            CompetitorRegistrationType competitorRegistrationType, String competitorRegistrationSecret) throws ParseException, NotFoundException {
         boolean controlTrackingFromStartAndFinishTimes = controlTrackingFromStartAndFinishTimesParam == null ? false
                 : Boolean.parseBoolean(controlTrackingFromStartAndFinishTimesParam);
+        boolean autoRestartTrackingUponCompetitorSetChange = autoRestartTrackingUponCompetitorSetChangeParam == null ? false
+                : Boolean.parseBoolean(autoRestartTrackingUponCompetitorSetChangeParam);
         boolean useStartTimeInterference = useStartTimeInterferenceParam == null ? true
                 : Boolean.parseBoolean(useStartTimeInterferenceParam);
         double buoyZoneRadiusInHullLengths = buoyZoneRadiusInHullLengthsParam == null ? 3.0
@@ -425,8 +517,9 @@ public class EventsResource extends AbstractSailingServerResource {
                     public Regatta call() throws Exception {
                         return getService().apply(new AddSpecificRegatta(regattaName, boatClassName,
                                 canBoatsOfCompetitorsChangePerRace, competitorRegistrationType, competitorRegistrationSecret, null, null, regattaId, regattaCreationParametersDTO,
-                                /* isPersistent */ true, scoringScheme, courseAreaId, buoyZoneRadiusInHullLengths,
-                                useStartTimeInterference, controlTrackingFromStartAndFinishTimes, rankingMetric));
+                                /* isPersistent */ true, scoringScheme,
+                                courseAreaId==null?Collections.emptySet():Collections.singleton(courseAreaId), buoyZoneRadiusInHullLengths,
+                                useStartTimeInterference, controlTrackingFromStartAndFinishTimes, autoRestartTrackingUponCompetitorSetChange, rankingMetric));
                     }
                 });
         final RegattaLeaderboard leaderboard = addLeaderboard(regattaName, leaderboardDiscardThresholds);
@@ -482,7 +575,14 @@ public class EventsResource extends AbstractSailingServerResource {
         final TimePoint startDate = parseTimePoint(startDateParam, startDateAsMillis, now());
         final TimePoint endDate = parseTimePoint(endDateParam, endDateAsMillis, new MillisecondsTimePoint(addOneWeek(startDate.asDate())));
         URL officialWebsiteURL = officialWebsiteURLParam == null ? null :  toURL(officialWebsiteURLParam);
-        URL baseURL = baseURLParam == null ? uriInfo.getBaseUri().toURL() : toURL(baseURLParam);
+        final URI baseUri = uriInfo.getBaseUri();
+        final int port = baseUri.getPort();
+        // guess the protocol; when behind an SSL-offloading reverse proxy or load balancer, all we'll see is a regular HTTP
+        // request; yet, we'd likely want the client to make requests using HTTPS, unless we see a dedicated port in the request
+        // that is not the HTTPS default port 443:
+        final String scheme = (port >= 0 && port != 443) ? "http" : "https";
+        URL baseURL = baseURLParam == null ? new URL(scheme+":"+baseUri.getSchemeSpecificPart().
+                substring(0, baseUri.getSchemeSpecificPart().length()-baseUri.getPath().length())) : toURL(baseURLParam);
         List<UUID> leaderboardGroupIds = leaderboardGroupIdsListParam == null ? new ArrayList<UUID>() : toUUIDList(leaderboardGroupIdsListParam);
         UUID eventId = UUID.randomUUID();
         // ignoring sailorsInfoWebsiteURLs, images, videos
@@ -497,7 +597,6 @@ public class EventsResource extends AbstractSailingServerResource {
             throw new IllegalArgumentException(ExceptionManager.incorrectParameterValue(competitorRegistrationTypeString,
                     StringUtils.join(CompetitorRegistrationType.values(), ", ")));
         }
-        
         Callable<Util.Triple<Event, LeaderboardGroup, RegattaLeaderboard>> doCreationAction = new Callable<Util.Triple<Event, LeaderboardGroup, RegattaLeaderboard>>() {
             @Override
             public Util.Triple<Event, LeaderboardGroup, RegattaLeaderboard> call() throws Exception {
@@ -525,11 +624,11 @@ public class EventsResource extends AbstractSailingServerResource {
                     leaderboard = validateAndCreateRegatta(regattaAndLeaderboardName, boatClassName,
                             /* scoringSchemeParam */ scoringScheme, courseArea.getId(), /* buoyZoneRadiusInHullLengthsParam */ null,
                             /* useStartTimeInterferenceParam */ null, /* controlTrackingFromStartAndFinishTimesParam */ null,
-                            /* rankingMetricParam */ rankingMetric, /* leaderboardDiscardThresholdsParam */ leaderboardDiscardThresholdsParam,
-                            numberOfRacesParam, canBoatsOfCompetitorsChangePerRace, competitorRegistrationType,
-                            localCompetitorRegistrationSecret);
+                            /* autoRestartTrackingUponCompetitorSetChangeParam */ null, /* rankingMetricParam */ rankingMetric,
+                            /* leaderboardDiscardThresholdsParam */ leaderboardDiscardThresholdsParam, numberOfRacesParam, canBoatsOfCompetitorsChangePerRace,
+                            competitorRegistrationType, localCompetitorRegistrationSecret);
                     if (leaderboardGroup != null) {
-                        getService().apply(new UpdateLeaderboardGroup(leaderboardGroup.getName(), leaderboardGroup.getName(),
+                        getService().apply(new UpdateLeaderboardGroup(leaderboardGroup.getId(), leaderboardGroup.getName(),
                                 leaderboardGroup.getDescription(), leaderboardGroup.getDisplayName(),
                                 Collections.singletonList(leaderboard.getName()),
                                 leaderboardGroup.getOverallLeaderboard() == null ? null
@@ -593,7 +692,9 @@ public class EventsResource extends AbstractSailingServerResource {
     private String getDefaultEventName() {
         final String username;
         username = getCurrentUser().getName();
+        synchronized (dateTimeFormat) {
         return "Session "+username+" "+dateTimeFormat.format(new Date());
+    }
     }
 
     private User getCurrentUser() {
@@ -657,7 +758,7 @@ public class EventsResource extends AbstractSailingServerResource {
         for (Event event : getService().getAllEvents()) {
             Iterable<CourseArea> courseAreas = event.getVenue().getCourseAreas();
             for (CourseArea courseArea : courseAreas) {
-                if (courseArea.getId().equals(leaderboard.getRegatta().getDefaultCourseArea().getId())) {
+                if (Util.contains(leaderboard.getRegatta().getCourseAreas(), courseArea.getId())) {
                     for (LeaderboardGroup lg : event.getLeaderboardGroups()) {
                         // if leaderboard group is default leaderboard group, then add leaderboard
                         if (lg.getName().equals(event.getName())) {
@@ -679,7 +780,7 @@ public class EventsResource extends AbstractSailingServerResource {
                 overallLeaderboardDiscardThresholds = resultDiscardingRule.getDiscardIndexResultsStartingWithHowManyRaces();
             }
             
-            getService().updateLeaderboardGroup(defaultLeaderboardGroup.getName(), defaultLeaderboardGroup.getName(), defaultLeaderboardGroup.getDescription(),
+            getService().updateLeaderboardGroup(defaultLeaderboardGroup.getId(), defaultLeaderboardGroup.getName(), defaultLeaderboardGroup.getDescription(),
                     defaultLeaderboardGroup.getDisplayName(), leaderboards, overallLeaderboardDiscardThresholds, 
                     defaultLeaderboardGroup.getOverallLeaderboard()==null?null:defaultLeaderboardGroup.getOverallLeaderboard().getScoringScheme().getType());
         }
@@ -707,10 +808,6 @@ public class EventsResource extends AbstractSailingServerResource {
                 .apply(new CreateRegattaLeaderboard(new RegattaName(regattaName), regattaName, discardThresholds));
                     }
                 });
-    }
-
-    private Response ok(String message, String mediaType) {
-        return Response.ok(message).header("Content-Type", mediaType + ";charset=UTF-8").build();
     }
 
     private Response getBadEventErrorResponse(String eventId) {
